Wikipedia fixed! --> Blue search button updated to pink

--- a/css/wiki.css
+++ b/css/wiki.css
@@ -111,7 +111,8 @@ input
     color: var(--link) !important;
 }
 
-.searchButton
+.searchButton,
+.oo-ui-buttonElement-framed.oo-ui-widget-enabled.oo-ui-flaggedElement-primary.oo-ui-flaggedElement-progressive > .oo-ui-buttonElement-button
 {
     background: var(--link) !important;
     color: var(--lavender-blue) !important;
